# libcmd

./: .gitignore  LICENSE  README.md  example.cpp  libcmd.hpp
example/: example.cpp
tests/: CMakeLists.txt  testlibcmd.cpp
